# yt-player

./: .dockerignore  .firebaserc  .gitignore  Dockerfile  README.md  docker-compose.yml  download.py  download_ffmpeg.ps1  download_songs.py  firebase.json  pakage.json  server.py  temp.py
backend/: .gitignore  database.py  download.py  download_songs.py  package-lock.json  package.json  pyproject.toml  server.cert  server.js  server.key  server.py  server_temp.py
backend/downloaded_yt_videos/: Mrs. GREEN APPLE - インフェルノ（Inferno）.webm  Oshi no Ko - Ending Full『Mephisto』by QUEEN BEE (Lyrics).webm  Post Malone - Circles (Official Music Video).webm  index  【LIVE映像】愛して愛して愛して PEACOCK THEATER  Los Angeles, CA 2024.3.29【Ado】.webm
frontend/: package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  ChatProvider.tsx  authProvider.tsx  firebaseConfig.ts  index.css  main.tsx
frontend/src/components/: ChatField.tsx  ChatWindow.tsx  FriendsList.tsx  MusicPanel.tsx  PlayerComponent.tsx  SignIn.tsx  VC.tsx
frontend/src/sections/: Header.tsx
functions/: package-lock.json
templates/: index.html
